[package]
name = "sensor-tracker"
version = "0.1.0"
authors = ["Håvard Wormdal Høiby <havardwhoiby@gmail.com>"]

[target.thumbv7m-none-eabi.dependencies.emlib]
git = "https://github.com/RustyGecko/emlib.git"
features = ["stk3700"]

[target.thumbv7m-none-eabi.dependencies.core]
git = "https://github.com/RustyGecko/rust-core.git"

[target.thumbv7m-none-eabi.dependencies.collections]
git = "https://github.com/RustyGecko/rust-collections.git"

[target.thumbv7m-none-eabi.dependencies.libc]
git = "https://github.com/RustyGecko/rust-libc.git"

[target.thumbv7m-none-eabi.dependencies.alloc]
git = "https://github.com/RustyGecko/rust-alloc.git"
